--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
             <!-- <img  src="/docs/5.1/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57"> -->
             <h1 class="display-6 fw-bold text-primary">Welcome to Admin area</h1>            
           </div>
-        <form method="post" action="{{url_for('hello')}}" type>
+        <form method="post" action="{{url_for('hello')}}" enctype = "multipart/form-data">
             <div class="col-md-6 mx-auto text-center">
                 <label for="name" class="form-label fw-bold fs-5">Please upload XLS</label>
 
