--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,6 +1,6 @@
 <html>
    <body>
-      <form action = "{{url_for('uploader')}}" method = "POST" 
+      <form action = "/uploader" method = "POST" 
          enctype = "multipart/form-data">
          <input type = "file" name = "file" />
          <input type = "submit"/>
